--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  margin: 10px;
+  padding: 10px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 1px;
+}
+ input {
+  padding: 8px 12px;
+  outline: none;
+  width: 220px;
+}
+.list {
+  border: 1px solid gray;
+  height: 300px;
+  overflow-y: auto;
+  width: 220px;
+  
+}
+.nodata {
+  border: 1px solid gray;
+  height: 200px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 220px;
+}
+.list > .item {
+  width: 100%;
+  padding: 3px;
+  border-bottom: 1px solid gray;
+}
+.list > .item > .id {
+  font-size: 19px;
+  font-weight: bold;
+}
+.list > .item > .name {
+  font-size: 16px;
+}
+.list > .item > .small {
+  font-size: 14px;
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
